--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -92,22 +92,22 @@
             <h2 class="text-center font-weight-bold samenwerkingtitle">In samenwerking met</h2>
           </div>
           <div class="col col-md-6 col-lg-4 my-4">
-            <img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/haagselogo.png') }}" >
+            <a href="#"><img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/haagselogo.png') }}" ></a>
           </div>
           <div class="col col-md-6 col-lg-4 my-4">
-            <img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/logo.png') }}" >
+            <a href="#"><img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/logo.png') }}" ></a>
           </div>
           <div class="col col-md-6 col-lg-4 my-4">
-            <img class="d-block ml-auto mr-auto" width="125px" src="{{ asset('build/images/dif_logo-format2.jpg') }}" >
+            <a href="#"><img class="d-block ml-auto mr-auto" width="125px" src="{{ asset('build/images/dif_logo-format2.jpg') }}" ></a>
           </div>
           <div class="col col-md-6 col-lg-4 my-4">
-            <img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/zoetermeer.png') }}" >
+            <a href="#"><img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/zoetermeer.png') }}" ></a>
           </div>
           <div class="col col-md-6 col-lg-4 my-4">
-            <img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/denhaag.jpg') }}" >
+            <a href="#"><img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/denhaag.jpg') }}" ></a>
           </div>
           <div class="col col-md-6 col-lg-4 my-4">
-            <img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/delft.png') }}" >
+            <a href="#"><img class="d-block ml-auto mr-auto" width="150px" src="{{ asset('build/images/delft.png') }}" ></a>
           </div>
     </div>
   </div>
