--- a/templates/components/survey/rating.html.twig
+++ b/templates/components/survey/rating.html.twig
@@ -9,10 +9,11 @@
   <option value="7">7</option>
   <option value="8">8</option>
   <option value="9">9</option>
+  <option value="10">10</option>
 </select>
   <div class="rating-description">
     <h4>Zeer ontevreden</h4>
-    <h4>Te vreden</h4>
+    <h4>Tevreden</h4>
   </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -25,7 +26,7 @@
         theme: 'bars-square',
         showValues: true,
         showSelectedRating: false,
-        initialRating: 3
+        initialRating: 5
       });
    });
 </script>
